# saassy

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  SKILL.md  build-images.sh  docker-compose.yml
apps/api/: .env.example  Cargo.toml  Dockerfile
apps/api/.sqlx/: query-06df7bde011842f17430ca7f4dbbc4ceb01ba8ef3607816a9e561bb5eeb9622f.json  query-38e26d3b48ddcbec41bcb44307febb84e1dde10a11f2a5310974ea06a423a1d9.json  query-3adedd1322c68251237f9be49d6494d2dfc7ececd429fca22c66b73fffecb5e5.json  query-484f1cd1ef4300f3804cf75df0102c8abad9da6c4b28c74f34fc1c1b511e6446.json  query-5b02896cfd57edd4e3b0082f650409a284bf1026930ce1ea90a90fbb8ac4a85f.json  query-65b69a34a0499e1ee2b840fc8463d851eedca1cd87f2f6ee30a711b896f71b9a.json  query-69772ead0b7f4c42eb2cdbe2d4e31bdb0fb7ed643f8567c744b88425fe3f54c6.json  query-78eb695d7051bfd9a5c9aec4a85875302aa4d6f36e6349bb5aab1cb59258431f.json  query-8646a6aeabbdb2fd69acce527136b64828c9f4b7c316c76de1f7379f4aa0dc80.json  query-adb8435c568489ecea2a3bbcca9682f3f347bd7877e834d81a0d0703fbd20fc0.json  query-bcbef1be1bc2de72279f0c4f6b8d923607fdcd1d6d21ef5025ed17908fe18ebb.json  query-f467aff95ef5ca0bae0f063d73838c35d672b83acb7897d87b61eef900ccccbd.json
apps/api/dictionaries/: de.json  en.json
apps/api/migrations/: 00002_create_document_tracks.sql  00003_encrypt_numbers.sql  00004_drop_plain_number.sql  00005_drop_magic_links.sql  00006_add_user_language.sql  00007_add_user_updated_at.sql
apps/api/src/: main.rs
apps/api/src/application/: app_error.rs  dictionaries.rs  email_templates.rs  language.rs  mod.rs
docs/: CNAME  (+2 more)
(+187 files in other folders)
